src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Entry Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Card (Chase)</fullName>
                </value>
                <value>
                    <fullName>Card (American Express)</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Place_of_Transaction__c</fullName>
        <label>Place of Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heidelberg</fullName>
                    <default>true</default>
                    <label>Heidelberg</label>
                </value>
                <value>
                    <fullName>Munich</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <displayFormat>TRANS-{000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income</fullName>
                    <default>true</default>
                    <label>Income</label>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TransactionCategory__c</columns>
        <columns>Amount__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Place_of_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Amount__c ==0.00</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Please enter the amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Category_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL( TransactionCategory__c ),  ISBLANK(TransactionCategory__c ))</errorConditionFormula>
        <errorDisplayField>TransactionCategory__c</errorDisplayField>
        <errorMessage>Please set the Category</errorMessage>
    </validationRules>
</CustomObject>